Ruhsat sekmesi eklendi

--- a/api/tractor/models/tractor.settings.json
+++ b/api/tractor/models/tractor.settings.json
@@ -55,6 +55,10 @@
     "Ceker": {
       "type": "string",
       "required": true
+    },
+    "Ruhsat": {
+      "type": "string",
+      "default": "Belirtilmedi"
     }
   }
 }
